fixed spacing for login, register, dashboard page

--- a/resources/sass/_blog.scss
+++ b/resources/sass/_blog.scss
@@ -55,3 +55,8 @@ body {
 i {
     margin-top: 0.2em;
 }
+
+.card-spacing {
+    margin-top: 20vh;
+    margin-bottom: 10vh;
+}
